# shooter-roguelike

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.cpp
Asset/: CMakeLists.txt  FontType.h
Asset/Enemy/: Enemy.json
Asset/Maps/: W1_S01.json  W1_S02.json
Asset/Player/: Player.json
Controller/: CMakeLists.txt  ControllerGlobals.h
Controller/Collision/: CollisionController.cpp  CollisionController.h
Controller/GUI/: GUIController.cpp  GUIController.h
Controller/Game/: GameController.cpp  GameController.h  GameState.h
Controller/Input/: InputController.cpp  InputController.h
Controller/Render/: RenderController.cpp  RenderController.h
Controller/Spawn/: SpawnController.cpp  SpawnController.h
Controller/Update/: UpdateController.cpp  UpdateController.h
Entities/: CMakeLists.txt  EntitiesGlobals.h  Entity.cpp  Entity.h
Entities/Character/: Character.cpp  Character.h  CharacterProjectileStatus.cpp  CharacterProjectileStatus.h  CharacterStatus.h
Entities/Map/: Map.cpp  Map.h  MapType.h
Entities/Map/Wave/: Wave.cpp  Wave.h  WaveEnemyInfo.cpp  WaveEnemyInfo.h
Entities/Projectile/: Projectile.cpp  Projectile.h
Entities/Skill/: Skill.cpp  Skill.h
Entity/: BaseEntity.cpp  BaseEntity.h  CMakeLists.txt  Entity.cpp  Entity.h  EntityGlobals.h  Shape.cpp  Shape.h
Entity/Character/: Character.cpp  Character.h  CharacterStatus.cpp  CharacterStatus.h
Entity/Enemy/: Enemy.cpp  Enemy.h
Entity/Map/: Map.cpp  Map.h
Entity/Player/: Player.cpp  Player.h  PlayerProjectileStatus.cpp  PlayerProjectileStatus.h  PlayerStatus.cpp  PlayerStatus.h
Entity/Projectile/: Projectile.cpp  Projectile.h
Entity/Skill/: Projectile.cpp  Projectile.h  Skill.cpp  Skill.h
Factory/: CMakeLists.txt  FactoryGlobals.h  MapFactory.cpp  MapFactory.h
Factory/Character/: CharacterFactory.cpp  CharacterFactory.h
Factory/Enemy/: EnemyFactory.cpp  EnemyFactory.h
Factory/Map/: MapFactory.cpp  MapFactory.h
Factory/Player/: PlayerFactory.cpp  PlayerFactory.h
Factory/Shape/: ShapeFactory.cpp  ShapeFactory.h
GUI/: CMakeLists.txt  Component.cpp  Component.h
GUI/Background/: Background.cpp  Background.h  BackgroundShape.cpp  BackgroundShape.h
GUI/Bar/: Bar.cpp  Bar.h  HealthBar.cpp
GUI/Button/: Button.cpp  Button.h
GUI/Layout/: Panel.h
GUI/Text/: Text.cpp  Text.h
Handler/: CMakeLists.txt  HandlerGlobals.h  InputHandler.cpp  InputHandler.h  UpdateHandler.cpp  UpdateHandler.h
Helper/: CMakeLists.txt  HelperGlobals.h
Helper/Color/: ColorHelper.cpp  ColorHelper.h
Helper/Json/: JsonHelper.cpp  JsonHelper.h
Manager/: AbstractManager.cpp  AbstractManager.h  AssetManager.cpp  AssetManager.h  CMakeLists.txt  GameManager.cpp  GameManager.h  MainManager.cpp  MainManager.h  ManagerGlobals.h  ScreenManager.cpp  ScreenManager.h
Renderable/: CMakeLists.txt
Renderables/: CMakeLists.txt  Renderable.cpp  Renderable.h  RenderablesGlobals.h
Runner/: CMakeLists.txt  Runner.cpp  Runner.h  RunnerGlobals.h  RunnerType.h
Screen/: CMakeLists.txt  Screen.cpp  Screen.h  ScreenType.h
Screens/: CMakeLists.txt  GameScreen.cpp  GameScreen.h  MainMenuScreen.cpp  MainMenuScreen.h  Screen.h
Shape/: CMakeLists.txt  ShapeGlobals.h
(+112 files in other folders)
